Weka almost works, metrics without feature selection reported on csv file